// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Offer (row) el with all data and a shop in the market 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current"
              >
                53 990 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        />
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно
          </span>
        </div>
        <div
          className="shop"
        >
          <div
            className="icon"
          />
          <div>
            Магазин, который продает
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Offer (row) el with all data and long shop name 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current"
              >
                53 990 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        />
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            РЕСПУБЛИКА - Книги. Музыка. Перспектива Книги. Музыка. Перспектива
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Offer (row) el with model, old price and discount 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current newCurrentPrice"
              >
                53 990 руб.
              </div>
              <div
                className="old"
              >
                107 980 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        >
          <div
            className="discount"
          >
            – 
            50
            %
          </div>
        </div>
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            OZON.ru
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Offer (row) el without image url 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current"
              >
                53 990 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        />
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            OZON.ru
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Offer (row) with all data and model found 1`] = `
<a
  className="offer"
  href="url1"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current"
              >
                43 990 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        />
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            300 руб.
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            СОТОХИТ.РФ
             
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Offer (row) with all data and without model 1`] = `
<a
  className="offer"
  href="url1"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current"
              >
                1 190 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        />
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            249 руб.
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            OZON.ru
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;
